# RegexClass

./: .gitignore  README.md  pyproject.toml
src/: __init__.py  pdf_viz.py  table_pdf_extractor.py  text_pdf_extractor.py
src/configs/rules/: notas.py
src/configs/tools/: queue.py
